# libedi

./: .gitignore  Makefile.am  autogen.sh  configure.ac
debian/: changelog  control  edi2xml.dirs  edi2xml.install  libedi.dirs  libedi.install  rules
expat/lib/: expat_static.vcproj
include/: Makefile.am  edistruct.h  libedi.h  libedistruct.h  libedixml.h
libedi/: detect.c  p_libedi.h  parse.c
libedistruct/: Makefile.am  UneceParser.pm  conv_specs.pl  dl_specs.pl  edistruct.h  lookup.c  struct_loader.c  test1.c
libedixml/: Makefile.am  conv.c  excep.c  excep.h  output.c  output.h
testdata/: APERAK01.txt  CONTRL01.txt  CONTRL02.txt  CONTRL03.txt  CONTRL04.txt  CONTRL_BCH.txt  aperak1.txt  aperak2.txt  unk1.txt
tests/: Makefile.am
win32/: asprintf.c  asprintf.h  edi2xml.vcproj  iconv.h  libedi.sln  libedi_lib.vcproj  libedistruct_lib.vcproj  libedixml.vcproj  msvcfix.h  test1.vcproj  test2.vcproj  test3.vcproj  win_iconv.c  wingetopt.cpp  wingetopt.h
xml/: Makefile.am  UneceParser.pm  conv.c  conv_specs.pl  dl_specs.pl  edi2xml.c  edi2xml.h  edistruct.h  output.c  output.h  test1.c
